--- a/reviews.ipynb
+++ b/reviews.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
        "(568454, 10)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        "(393931, 10)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
        "(393917, 10)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,53 +242,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 Time taken: 1.6927719116210938e-05\n",
-      "10000 Time taken: 4.26750111579895\n",
-      "20000 Time taken: 4.606721878051758\n",
-      "30000 Time taken: 4.318329811096191\n",
-      "40000 Time taken: 4.398187637329102\n",
-      "50000 Time taken: 4.386837005615234\n",
-      "60000 Time taken: 4.6317079067230225\n",
-      "70000 Time taken: 4.903625011444092\n",
-      "80000 Time taken: 4.382453918457031\n",
-      "90000 Time taken: 4.531135082244873\n",
-      "100000 Time taken: 4.221998929977417\n",
-      "110000 Time taken: 4.624211072921753\n",
-      "120000 Time taken: 4.828066110610962\n",
-      "130000 Time taken: 4.346555233001709\n",
-      "140000 Time taken: 4.350635051727295\n",
-      "150000 Time taken: 4.977027893066406\n",
-      "160000 Time taken: 4.578828811645508\n",
-      "170000 Time taken: 4.368210077285767\n",
-      "180000 Time taken: 4.323323965072632\n",
-      "190000 Time taken: 4.393045902252197\n",
-      "200000 Time taken: 4.8498170375823975\n",
-      "210000 Time taken: 4.4135520458221436\n",
-      "220000 Time taken: 4.37319016456604\n",
-      "230000 Time taken: 4.6422529220581055\n",
-      "240000 Time taken: 4.18298077583313\n",
-      "250000 Time taken: 4.431384801864624\n",
-      "260000 Time taken: 4.50162410736084\n",
-      "270000 Time taken: 4.742058992385864\n",
-      "280000 Time taken: 4.419977903366089\n",
-      "290000 Time taken: 4.262532949447632\n",
-      "300000 Time taken: 4.587945222854614\n",
-      "310000 Time taken: 4.433168888092041\n",
-      "320000 Time taken: 4.3959760665893555\n",
-      "330000 Time taken: 4.2549049854278564\n",
-      "340000 Time taken: 4.245659828186035\n",
-      "350000 Time taken: 4.341548919677734\n",
-      "360000 Time taken: 4.486767053604126\n",
-      "370000 Time taken: 4.434962272644043\n",
-      "380000 Time taken: 4.491758108139038\n",
-      "390000 Time taken: 4.409529685974121\n"
+      "0 Time taken: 1.71661376953125e-05\n",
+      "10000 Time taken: 4.3749098777771\n",
+      "20000 Time taken: 4.708866119384766\n",
+      "30000 Time taken: 4.568539142608643\n",
+      "40000 Time taken: 4.62880802154541\n",
+      "50000 Time taken: 4.5282227993011475\n",
+      "60000 Time taken: 4.770205020904541\n",
+      "70000 Time taken: 4.965320348739624\n",
+      "80000 Time taken: 4.489989995956421\n",
+      "90000 Time taken: 4.625513076782227\n",
+      "100000 Time taken: 4.317527770996094\n",
+      "110000 Time taken: 4.552977085113525\n",
+      "120000 Time taken: 5.0527238845825195\n",
+      "130000 Time taken: 4.3661041259765625\n",
+      "140000 Time taken: 4.7521891593933105\n",
+      "150000 Time taken: 4.784742832183838\n",
+      "160000 Time taken: 4.702324151992798\n",
+      "170000 Time taken: 4.524445295333862\n",
+      "180000 Time taken: 4.384989976882935\n",
+      "190000 Time taken: 4.470877170562744\n",
+      "200000 Time taken: 4.842023134231567\n",
+      "210000 Time taken: 4.454391956329346\n",
+      "220000 Time taken: 4.357189893722534\n",
+      "230000 Time taken: 4.618694067001343\n",
+      "240000 Time taken: 4.16125226020813\n",
+      "250000 Time taken: 4.302137851715088\n",
+      "260000 Time taken: 4.361044883728027\n",
+      "270000 Time taken: 5.150294065475464\n",
+      "280000 Time taken: 4.651711940765381\n",
+      "290000 Time taken: 4.285775899887085\n",
+      "300000 Time taken: 4.5674660205841064\n",
+      "310000 Time taken: 4.4398579597473145\n",
+      "320000 Time taken: 4.3928141593933105\n",
+      "330000 Time taken: 4.229358196258545\n",
+      "340000 Time taken: 4.197735786437988\n",
+      "350000 Time taken: 4.235612869262695\n",
+      "360000 Time taken: 4.336947917938232\n",
+      "370000 Time taken: 4.439044713973999\n",
+      "380000 Time taken: 4.698643922805786\n",
+      "390000 Time taken: 4.507415056228638\n"
      ]
     }
    ],
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
        "(393917, 393917)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
        "(393917, 5000)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,6 +569,248 @@
    "metadata": {},
    "source": [
     "# Glove"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torchtext.vocab import build_vocab_from_iterator\n",
+    "from torchtext.data.utils import get_tokenizer\n",
+    "tokenizer = get_tokenizer('basic_english')\n",
+    "def yield_tokens(data_iter):\n",
+    "    for text in data_iter:\n",
+    "        yield tokenizer(text)\n",
+    "vocab = build_vocab_from_iterator(yield_tokens(cleaned_data), specials=[\"<unk>\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3953, 173]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vocab(['hello', 'how'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_pipeline = lambda x: vocab(tokenizer(x))\n",
+    "label_pipeline = lambda x: int(x) - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "glove_file = \"glove.840B.300d.txt\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#takes about 1 minute to read through the whole file and find the words we need. \n",
+    "def get_glove_mapping(vocab, file):\n",
+    "    \"\"\"\n",
+    "    Gets the mapping of words from the vocabulary to pretrained embeddings\n",
+    "    \n",
+    "    INPUT:\n",
+    "    vocab       - set of vocabulary words\n",
+    "    file        - file with pretrained embeddings\n",
+    "\n",
+    "    OUTPUT:\n",
+    "    glove_map   - mapping of words in the vocabulary to the pretrained embedding\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    glove_map = {}\n",
+    "    with open(file,'rb') as fi:\n",
+    "        for i, l in enumerate(fi):\n",
+    "            try:\n",
+    "                #### STUDENT CODE HERE ####\n",
+    "                line = l.decode('utf-8')\n",
+    "                line = line.split(' ')\n",
+    "                word = line[0]\n",
+    "                if word in vocab:\n",
+    "                    array = np.array(line[1:], dtype=np.float)\n",
+    "                    glove_map[word] = array\n",
+    "                #### STUDENT CODE ENDS HERE ####\n",
+    "            except:\n",
+    "                print('some sort of error')\n",
+    "                #some lines have urls, we don't need them.\n",
+    "                pass\n",
+    "    return glove_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "glove_map = get_glove_mapping(vocab,glove_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "141963"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(vocab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_weight_matrix(n_embed, d_embed, glove_map):\n",
+    "    \"\"\"\n",
+    "    Initialize the weight matrix\n",
+    "    \n",
+    "    INPUT:\n",
+    "    n_embed         - size of the dictionary of embeddings\n",
+    "    d_embed         - the size of each embedding vector\n",
+    "\n",
+    "    OUTPUT:\n",
+    "    weights_matrix  - matrix of mapping from word id to embedding \n",
+    "    \n",
+    "    \"\"\"\n",
+    "    #### STUDENT CODE HERE ####\n",
+    "    weights_matrix = np.random.normal(size=(n_embed, d_embed))\n",
+    "    for i, word in enumerate(vocab.get_itos()):\n",
+    "      if word in glove_map:\n",
+    "        weights_matrix[i] = glove_map[word]\n",
+    "    #### STUDENT CODE ENDS HERE ####\n",
+    "    return weights_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weights_matrix = get_weight_matrix(len(vocab), 300, glove_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.58011272, -0.29763328, -0.43466926, ..., -1.03894847,\n",
+       "         0.42126296,  0.07775777],\n",
+       "       [ 0.27204   , -0.06203   , -0.1884    , ...,  0.13015   ,\n",
+       "        -0.18317   ,  0.1323    ],\n",
+       "       [ 0.18733   ,  0.40595   , -0.51174   , ...,  0.16495   ,\n",
+       "         0.18757   ,  0.53874   ],\n",
+       "       ...,\n",
+       "       [-0.043135  , -0.28083   , -0.4118    , ..., -0.54499   ,\n",
+       "        -0.059479  , -0.2025    ],\n",
+       "       [ 0.3352    , -0.45973   , -0.0022043 , ..., -0.33752   ,\n",
+       "        -0.08841   , -0.40727   ],\n",
+       "       [-0.44347469, -0.01600193, -1.63103454, ..., -1.71471549,\n",
+       "         0.23815868, -0.42456805]])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weights_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 300)"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weights_matrix[vocab(['hello', 'how'])].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sentenceToTensor(line):\n",
+    "    entries = text_pipeline(line)\n",
+    "    tensor = torch.from_numpy(weights_matrix[entries])\n",
+    "    return tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 300])"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentenceToTensor('hello how').shape"
    ]
   }
  ],
