train one example

--- a/reviews.ipynb
+++ b/reviews.ipynb
@@ -722,43 +722,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
-    "weights_matrix = get_weight_matrix(len(vocab), 300, glove_map)"
+    "weights_matrix = get_weight_matrix(len(vocab), 300, glove_map).astype('float32')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 1.58011272, -0.29763328, -0.43466926, ..., -1.03894847,\n",
-       "         0.42126296,  0.07775777],\n",
-       "       [ 0.27204   , -0.06203   , -0.1884    , ...,  0.13015   ,\n",
-       "        -0.18317   ,  0.1323    ],\n",
-       "       [ 0.18733   ,  0.40595   , -0.51174   , ...,  0.16495   ,\n",
-       "         0.18757   ,  0.53874   ],\n",
-       "       ...,\n",
-       "       [-0.043135  , -0.28083   , -0.4118    , ..., -0.54499   ,\n",
-       "        -0.059479  , -0.2025    ],\n",
-       "       [ 0.3352    , -0.45973   , -0.0022043 , ..., -0.33752   ,\n",
-       "        -0.08841   , -0.40727   ],\n",
-       "       [-0.44347469, -0.01600193, -1.63103454, ..., -1.71471549,\n",
-       "         0.23815868, -0.42456805]])"
+       "dtype('float32')"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "weights_matrix"
+    "weights_matrix.dtype"
    ]
   },
   {
@@ -783,35 +771,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sentenceToTensor(line):\n",
     "    entries = text_pipeline(line)\n",
     "    tensor = torch.from_numpy(weights_matrix[entries])\n",
-    "    return tensor"
+    "    return tensor.unsqueeze(1)\n",
+    "\n",
+    "def wordToTensor(word):\n",
+    "    entries = text_pipeline(word)\n",
+    "    return torch.from_numpy(weights_matrix[entries])\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([2, 300])"
+       "torch.float32"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sentenceToTensor('hello how').shape"
+    "wordToTensor('word').dtype"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn as nn\n",
+    "\n",
+    "class RNN(nn.Module):\n",
+    "    def __init__(self, input_size, hidden_size, output_size):\n",
+    "        super(RNN, self).__init__()\n",
+    "\n",
+    "        self.hidden_size = hidden_size\n",
+    "\n",
+    "        self.i2h = nn.Linear(input_size + hidden_size, hidden_size)\n",
+    "        self.i2o = nn.Linear(input_size + hidden_size, output_size)\n",
+    "        # self.softmax = nn.LogSoftmax(dim=1)\n",
+    "\n",
+    "    def forward(self, input, hidden):\n",
+    "        combined = torch.cat((input, hidden), 1)\n",
+    "        hidden = self.i2h(combined)\n",
+    "        output = self.i2o(combined)\n",
+    "        output = nn.functional.sigmoid(output)\n",
+    "        return output, hidden\n",
+    "\n",
+    "    def initHidden(self):\n",
+    "        return torch.zeros(1, self.hidden_size)\n",
+    "\n",
+    "emb_size = 300\n",
+    "rnn = RNN(emb_size, emb_size, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.float32 torch.float32\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.4935]], grad_fn=<SigmoidBackward0>)"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hidden = torch.zeros(1, emb_size)\n",
+    "input = wordToTensor('hello')\n",
+    "print(hidden.dtype, input.dtype)\n",
+    "rnn(input, hidden)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "criterion = nn.BCELoss()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learning_rate = 0.005 # If you set this too high, it might explode. If too low, it might not learn\n",
+    "\n",
+    "def train(category_tensor, sentence_tensor):\n",
+    "    hidden = rnn.initHidden()\n",
+    "\n",
+    "    rnn.zero_grad()\n",
+    "\n",
+    "    for i in range(sentence_tensor.size()[0]):\n",
+    "        output, hidden = rnn(sentence_tensor[i], hidden)\n",
+    "    \n",
+    "\n",
+    "    loss = criterion(output, category_tensor)\n",
+    "    loss.backward()\n",
+    "\n",
+    "    # Add parameters' gradients to their values, multiplied by learning rate\n",
+    "    for p in rnn.parameters():\n",
+    "        p.data.add_(p.grad.data, alpha=-learning_rate)\n",
+    "\n",
+    "    return output, loss.item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[0.5144]], grad_fn=<SigmoidBackward0>), 0.6647366881370544)"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train(torch.tensor([[1]], dtype=torch.float), sentenceToTensor('I like this product'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
