--- a/lstm.ipynb
+++ b/lstm.ipynb
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -1109,7 +1109,7 @@
     "          count+= 1\n",
     "    \n",
     "    # return the accuracy\n",
-    "    print(count/len(val_data))"
+    "    print(count/len(val_data_movie))"
    ]
   }
  ],
