--- a/bert.ipynb
+++ b/bert.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -65,21 +65,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total: 10000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "X, y = data['Text'][:10000], data['Score'][:10000]\n",
+    "X, y = data['Text'], data['Score']\n",
     "y[y<4] = 0 # negative class\n",
     "y[y>=4] = 1 # positive class\n",
     "y = np.array(y)\n",
@@ -88,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -100,19 +92,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 Time taken: 0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "start = time.time()\n",
     "for i, sentence in enumerate(X):\n",
@@ -128,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -141,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -165,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -183,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -202,7 +186,7 @@
     "val_labels = np.array(val_labels)\n",
     "test_labels = np.array(test_labels)\n",
     "\n",
-    "draw_train = stratify(train_labels, 2000)\n",
+    "draw_train = stratify(train_labels, 20000)\n",
     "draw_val = stratify(val_labels, 200)\n",
     "draw_test = stratify(test_labels, 200)\n",
     "\n",
@@ -293,7 +277,7 @@
     "     'weight_decay_rate': 0.0}\n",
     "]\n",
     "\n",
-    "optimizer = BertAdam(optimizer_grouped_parameters, lr=2e-5, eps=1e-8, warmup=0.1)"
+    "optimizer = AdamW(model.parameters(), lr=1e-6, eps=1e-8)"
    ]
   },
   {
